Added Staff login & updated swagger accordingly.
